--- a/Desktop/cs411/project/index.html
+++ b/Desktop/cs411/project/index.html
@@ -56,7 +56,7 @@
 }
 
     </style>
-    <title>Group4 project</title>
+    <title>Places Searchbox</title>
     <style>
       #target {
         width: 345px;
@@ -72,13 +72,20 @@
 // This example adds a search box to a map, using the Google Place Autocomplete
 // feature. People can enter geographical searches. The search box will return a
 // pick list containing a mix of places and predicted search terms.
-
+var marker;
 function initAutocomplete() {
+  var myLatLng ={lat: 42.350148, lng:  -71.107600};
+  var WarrenLatLng = {lat:42.349391,  lng: -71.104134};
+  var GSULatLng = {lat:42.351111,  lng: -71.108923};
+  var CFALatLng = {lat:42.351280, lng:-71.113835};
+  var LabLatLng = {lat:42.349937,lng: -71.106910};
+  var CASLatLng = {lat:42.349925, lng:-71.101325};
   var map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: 42.350148, lng:  -71.107600},
+    center: myLatLng,
     zoom: 16,
     mapTypeId: google.maps.MapTypeId.ROADMAP
   });
+  
 
   // Create the search box and link it to the UI element.
   var input = document.getElementById('pac-input');
@@ -90,6 +97,61 @@ function initAutocomplete() {
   });
 
   var markers = [];
+  var iconBase = 'https://maps.google.com/mapfiles/kml/shapes/';
+  var image = './';
+  marker1 = new google.maps.Marker({
+    map: map,
+    draggable: true,
+    animation: google.maps.Animation.DROP,
+    position: myLatLng,
+    title: 'This is Boston University, We are doing a prototype presentation',
+    icon: image+'school-2.png'
+  });
+
+  markerWarren = new google.maps.Marker({
+    map: map,
+    draggable: true,
+    animation: google.maps.Animation.DROP,
+    position: WarrenLatLng,
+    title: 'This is warrentower, We are doing a prototype presentation',
+    icon: image+'school-2.png'
+  });
+  markerGSU = new google.maps.Marker({
+    map: map,
+    draggable: true,
+    animation: google.maps.Animation.DROP,
+    position: GSULatLng,
+    title: 'This is GSU, We are doing a prototype presentation',
+    icon: image+'school-2.png'
+  });
+
+  markerCFA = new google.maps.Marker({
+    map: map,
+    draggable: true,
+    animation: google.maps.Animation.DROP,
+    position: CFALatLng,
+    title: 'This is CFA, We are doing a prototype presentation',
+    icon: image+'school-2.png'
+  });
+ 
+  markerLab = new google.maps.Marker({
+    map: map,
+    position: LabLatLng,
+    draggable: true,
+    animation: google.maps.Animation.DROP,
+    title: 'This is Ourlab, We are doing a prototype presentation',
+     icon: image+'school-2.png'
+  });
+
+  markerCAS = new google.maps.Marker({
+    map: map,
+    draggable: true,
+    animation: google.maps.Animation.DROP,
+    position:  CASLatLng,
+    title: 'This is CAS, We are doing a prototype presentation',
+     icon: image+'school-2.png'
+  });
+  
   // [START region_getplaces]
   // Listen for the event fired when the user selects a prediction and retrieve
   // more details for that place.
@@ -141,6 +203,14 @@ function initAutocomplete() {
 
   
   // [END region_getplaces]
+}
+
+function toggleBounce() {
+  if (marker.getAnimation() !== null) {
+    marker.setAnimation(null);
+  } else {
+    marker.setAnimation(google.maps.Animation.BOUNCE);
+  }
 }
 
 
